fix: spotlight slide title is wrong color in dark mode

--- a/packages/webapp/src/components/SpotlightList/index.less
+++ b/packages/webapp/src/components/SpotlightList/index.less
@@ -48,6 +48,7 @@
   }
 
   .title {
+    color: @spotlight-list-color;
     font-weight: 300;
     overflow: hidden;
     display: -webkit-box;
